# mpgu_imi_nummet_course4_sem8

./: CMakeLists.txt  README.md
lab01/: lab01_01.cpp  lab01_02.cpp  lab01_03.cpp  lab01_04.cpp  lab01_05.cpp  lab01_06.cpp  lab01_07.cpp
lab02/: lab02_01.cpp
lab03/: lab03_01.cpp
lab04/: lab04_01.cpp  lab04_01.tex
lab05/: lab05_01.cpp
lab06/: lab06_01.cpp
