cmake_minimum_required(VERSION 3.27)
project(mpgu_imi_nummet_course4_sem8)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab01_01 lab01/lab01_01.cpp)
add_executable(lab01_02 lab01/lab01_02.cpp)
add_executable(lab01_03 lab01/lab01_03.cpp)
add_executable(lab01_04 lab01/lab01_04.cpp)
add_executable(lab01_05 lab01/lab01_05.cpp)
add_executable(lab01_06 lab01/lab01_06.cpp)
add_executable(lab01_07 lab01/lab01_07.cpp)

add_executable(lab02_01 lab02/lab02_01.cpp)

add_executable(lab03_01 lab03/lab03_01.cpp)

add_executable(lab04_01 lab04/lab04_01.cpp)

add_executable(lab05_01 lab05/lab05_01.cpp)

add_executable(lab06_01 lab06/lab06_01.cpp)
